// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NirField renders correctly with 2 characters 1`] = `
<div class="row row--dense">
  <div class="col-sm-12 col-md-12 col">
    <div class="v-input theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span class="notranslate">​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="input-7" class="v-label theme--light" style="left: 0px; position: absolute;">Numéro de sécurité sociale</label><input aria-labelledby="Numéro de sécurité sociale" aria-describedby="13 caractères" id="input-7" type="text"></div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages theme--light">
            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
              <div class="v-messages__message">13 caractères</div>
            </transition-group-stub>
          </div>
          <div class="v-counter theme--light">0 / 13</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`NirField renders correctly with 13 characters 1`] = `
<div class="row row--dense">
  <div class="col-sm-12 col-md-12 col">
    <div class="v-input theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span class="notranslate">​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="input-2" class="v-label theme--light" style="left: 0px; position: absolute;">Numéro de sécurité sociale</label><input aria-labelledby="Numéro de sécurité sociale" aria-describedby="13 caractères" id="input-2" type="text"></div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages theme--light">
            <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
              <div class="v-messages__message">13 caractères</div>
            </transition-group-stub>
          </div>
          <div class="v-counter theme--light">0 / 13</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
